OpenJMLTest/test/textBlock6/expected
test/textBlock6/Test.java:5: error: unclosed text block
			"""
			^
test/textBlock6/Test.java:9: error: ';' expected
			@*/ // ERROR - not closed
			   ^
Operation not performed because of parse or type errors
2 errors
